# PyLinkedin

./: LICENSE.txt  README.md  pyproject.toml
pylinkedin/: __main__.py  config.py  dados_vagas.py  envio_telegram.py
